# TrackingMAE

./: .gitignore  README.md  pyproject.toml
local/: local_run_preprocessing.py  local_run_tensorboard.py  visualize_tracking_data.py
local/decoding/: local_run_eval.py  local_run_training.py
local/mae/: local_run_eval.py  local_run_preprocessing.py  local_run_training.py  local_visualize_attention.py
src/: constants.py  utils.py
src/data/: data_classes.py  data_config.py  preprocessing.py  preprocessing_config.py  tracking_preprocessing.py  transforms.py  utils.py
src/data/decoding/: data_config.py  data_module.py  transforms.py
src/data/mae/: data_config.py  data_module.py  transforms.py
src/loss/: losses.py
src/model/: blocks.py  model_driver.py  utils.py
src/model/decoding/: blocks.py  entrypoint.py  model.py  model_config.py
src/model/mae/: blocks.py  entrypoint.py  masking.py  model.py  model_config.py  visualize_attention.py
src/visualization/: tracking.py
tests/data/: test_transforms.py  test_utils.py
tests/data/decoding/: test_transforms.py
tests/data/mae/: test_transforms.py
tests/loss/: test_losses.py
